# Web-HW14

./: README.md
Web-HW13/: auth.py  config.py  db.py  main.py  models.py  my_email.py  pyproject.toml  repository.py  routes.py  schemas.py
Web-HW13/docs/: conf.py
Web-HW13/docs/_build/doctrees/: environment.pickle  index.doctree
Web-HW13/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Web-HW13/docs/_build/html/_sources/: index.rst.txt
Web-HW13/tests/: test_routes.py  test_unit_repository.py
